infrastructure/kubernetes/base/namespace-config.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: iimp
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
